[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ts_ess_common"
description = "Rubin Observatory Environment Sensors Support common code."
license = { text = "GPL" }
classifiers = ["Programming Language :: Python :: 3"]
urls = { documentation = "https://ts-ess-common.lsst.io", repository = "https://github.com/lsst-ts/ts_ess_common" }
dynamic = ["version"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools.packages.find]
where = ["python"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[project.optional-dependencies]
dev = ["documenteer[pipelines]"]
